[package]
name = "racpro"
version = "0.0.1"
authors = ["RAC"]
edition = "2021"
description = "Rac PRO, Made By LuaCodder"
repository = "https://github.com/dhgatjeye/rac-pro"
license = "Apache-2.0"

[profile.release]
debug = false
debug-assertions = false
rpath = false
strip = "symbols"

[dependencies]
winapi = { version = "0.3.9", features = ["winnt", "timeapi", "mmsystem", "profileapi", "ntdef", "securitybaseapi", "minwindef", "processthreadsapi", "synchapi", "errhandlingapi", "winerror", "libloaderapi"] }
crossterm = "0.28.1"
libloading = "0.8.6"